--- a/brt-dar-es-salaam-routes/src/test.html
+++ b/brt-dar-es-salaam-routes/src/test.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js"></script>
-<link rel="stylesheet" href="./libraries/custom.css">
+<link rel="stylesheet" href="./libraries/custom.css" type="text/css">
 </head>
 
 <body>
