--- a/brt-dar-es-salaam-routes/src/index.html
+++ b/brt-dar-es-salaam-routes/src/index.html
@@ -74,11 +74,12 @@ select {
 <div class="selectors">
     <div class="select">
       <select name="slct" id="slct" onclick="changeRoute(event)">
-        <option selected disabled>Choose a route</option>
+        <option disabled>Choose a route</option>
+        <option selected value="all">Show All Routes</option>
         <option value="kim-kiv">Kimara-Kivukoni</option>
         <!-- <option value="mor-kim">Morroco-Kimara</option> -->
         <!-- <option value="kkoo-kim">Kkoo-Kimara</option> -->
-        <option value="muh-kkoo">Muhimbili-Kkoo</option>
+        <option value="muh-kkoo">Muhimbili-Kariakoo</option>
       </select>
     </div>
   </div>
