+Better Geojson Routes

--- a/brt-dar-es-salaam-routes/src/index.html
+++ b/brt-dar-es-salaam-routes/src/index.html
@@ -77,7 +77,7 @@ select {
         <option disabled>Choose a route</option>
         <option selected value="all">Show All Routes</option>
         <option value="kim-kiv">Kimara-Kivukoni</option>
-        <!-- <option value="mor-kim">Morroco-Kimara</option> -->
+        <option value="mbezi-makumbusho">Mbezi-Makumbusho</option>
         <!-- <option value="kkoo-kim">Kkoo-Kimara</option> -->
         <option value="muh-kkoo">Muhimbili-Kariakoo</option>
       </select>
