--- a/brt-dar-es-salaam-routes/src/index.html
+++ b/brt-dar-es-salaam-routes/src/index.html
@@ -76,10 +76,10 @@ select {
       <select name="slct" id="slct" onclick="changeRoute(event)">
         <option disabled>Choose a route</option>
         <option selected value="all">Show All Routes</option>
-        <option value="kim-kiv">Kimara-Kivukoni</option>
-        <option value="mbezi-makumbusho">Mbezi-Makumbusho</option>
-        <!-- <option value="kkoo-kim">Kkoo-Kimara</option> -->
-        <option value="muh-kkoo">Muhimbili-Kariakoo</option>
+        <option value="kimara_kivukoni">Kimara-Kivukoni</option>
+        <option value="mbezi_makumbusho">Mbezi-Makumbusho</option>
+        <option value="morroco_kivukoni">Morroco-Kivukoni</option>
+        <option value="muh_kkoo">Muhimbili-Kariakoo</option>
       </select>
     </div>
   </div>
