Added More routes

--- a/brt-dar-es-salaam-routes/src/index.html
+++ b/brt-dar-es-salaam-routes/src/index.html
@@ -136,7 +136,9 @@ select {
         <option disabled>Choose a route</option>
         <option selected value="all">Show All Routes</option>
         <option value="kimara_kivukoni">Kimara-Kivukoni</option>
-        <option value="mbezi_makumbusho">Mbezi-Makumbusho</option>
+        <option value="makumbusho_posta">Makumbusho-Posta</option>
+        <option value="mbezi_makumbusho">Mbezi-Makumbusho via Goba</option>
+        <option value="mbezi_kim_makumbusho">Mbezi-Makumbusho via Ubungo</option>
         <option value="morroco_kivukoni">Morroco-Kivukoni</option>
         <option value="muh_kkoo">Muhimbili-Kariakoo</option>
       </select>
