--- a/visualizations/src/index.html
+++ b/visualizations/src/index.html
@@ -144,6 +144,7 @@ select {
     </div>
   </div>
 <!-- <script src="./src/base.js"></script> -->
+<!-- <script src="./base.js"></script> -->
 
 </body>
 </html>
